<resources>
    <string name="app_name">MOBILE APP DEVELOPMENT COURSEWORK</string>
    <string name="n_survey">HELLO STUDENT</string>
    <string name="log_in1">LOG IN</string>
    <string name="sign_up1">REGISTER</string>
    <string name="user_name1">ENTER YOUR USERNAME</string>
    <string name="password_hit_1">ENTER YOUR PASSWORD</string>
    <string name="log_in2">LOG IN</string>
    <string name="confirm_password">PLEASE CONFIRM YOUR PASSWORD</string>
    <string name="student_details">USER DETAILS</string>
    <string name="edit_survey">EDIT SURVEY</string>
    <string name="publish_survey">PUBLISH SURVEY</string>
    <string name="add_survey">ADD SURVEY</string>
    <string name="view_graph">VIEW GRAPH</string>
    <string name="log_out_admin">LOG OUT</string>
    <string name="welcome_admin">HELLO ADMIN</string>
    <string name="wellcome_admin">HELLO ADMIN</string>
    <string name="log_in_as_student">LOG IN AS A STUDENT</string>
    <string name="admin_sign_up">SIGN UP</string>
    <string name="sing_up">SIGN UP</string>
    <string name="log_in_as_admin">LOG IN AS ADMIN</string>
    <string name="search_id">SEARCH ID</string>
    <string name="editSearch_id">SEARCH ID</string>
    <string name="search">SEARCH</string>
    <string name="txt1search_id">SEARCH ID</string>
    <string name="txtUsernameFromStudent2">USERNAME:</string>
    <string name="txtUsernameFromStudentHint1">STUDENT USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="student_password_stusend_detais">STUDENT PASSWORD</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="update_survey">UPDATE SURVEY</string>
    <string name="update_survey2">UPDATE SURVEY</string>
    <string name="delete_survey">DELETE SURVEY</string>
    <string name="delete_survey1">DELETE SURVEY</string>
    <string name="add_questions">ADD QUESTIONS</string>
    <string name="add_survey1">ADD SURVEY</string>
    <string name="select_available_survey">SELECT SURVEYS</string>
    <string name="refresh_module">REFRESH</string>
    <string name="module">MODULE</string>
    <string name="start_date_end_date">START DATE / END DATE</string>
    <string name="status">STATUS</string>
</resources>